--- a/_posts/2024-11-02-hi.md
+++ b/_posts/2024-11-02-hi.md
@@ -1,8 +1,9 @@
 ---
-layout: title
-title: Hi!
+layout: post
+title: Welcome
 ---
 
-Hi, I am a Ph.D. scholar at International Max Plank Research School on Intelligent Systems (IMPRS-IS) and the Human Computer Interaction and Cognitive Systems (HCI CS) group at the University of Stuttgart, Germany. I work to improve human-AI cooperation by investigating the intersection of Machine Theory of Mind and Multi-Agent Reinforcement Learning.
+Hi, I am a Ph.D. scholar at International Max Plank Research School on Intelligent Systems (IMPRS-IS) and the Human Computer Interaction and Cognitive Systems (HCI CS) group at the University of Stuttgart, Germany. 
+I work to improve human-AI cooperation by investigating the intersection of Machine Theory of Mind and Multi-Agent Reinforcement Learning.
 
 You can find more about my work [here](https://www.perceptualui.org/people/ruhdorfer/).
