Corrected post date

--- a/_posts/2024-02-11-hi.md
+++ b/_posts/2024-02-11-hi.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Welcome
+title: Welcome!
 ---
 
 Hi, I am a Ph.D. scholar at International Max Plank Research School on Intelligent Systems (IMPRS-IS) and the Human Computer Interaction and Cognitive Systems (HCI CS) group at the University of Stuttgart, Germany. 
