--- a/_posts/2023-11-01-hi.md
+++ b/_posts/2023-11-01-hi.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Welcome!
+title: IMPRS-IS Ph.D. Scholar at HCI CS (University of Stuttgart)
 ---
 
 I have joined the International Max Plank Research School on Intelligent Systems (IMPRS-IS) and the Human Computer Interaction and Cognitive Systems (HCI CS) group at the University of Stuttgart, Germany, as a  Ph.D. scholar. 
