--- a/_posts/2023-11-01-hi.md
+++ b/_posts/2023-11-01-hi.md
@@ -3,7 +3,7 @@ layout: post
 title: IMPRS-IS Ph.D. Scholar at HCI CS (University of Stuttgart)
 ---
 
-I have joined the International Max Plank Research School on Intelligent Systems (IMPRS-IS) and the Human Computer Interaction and Cognitive Systems (HCI CS) group at the University of Stuttgart, Germany, as a  Ph.D. scholar. 
+I have joined the International Max Planck Research School on Intelligent Systems (IMPRS-IS) and the Human Computer Interaction and Cognitive Systems (HCI CS) group at the University of Stuttgart, Germany, as a  Ph.D. scholar. 
 My work will focus on improving human-AI cooperation by investigating the intersection of Machine Theory of Mind and Multi-Agent Reinforcement Learning.
 
 You can find more about my work [here](https://www.perceptualui.org/people/ruhdorfer/).
